# resume_writer

./: .gitignore  AGENTS.md  APP_SPEC.md  ARCHITECTURE.md  CONVENTIONS.md  DOCSTRINGS.md  README.md  docstrings.json  docstrings.py  docstrings_parser.json  docstrings_parser.md  docstrings_resume_render.json  docstrings_resume_render.md  education.py  pyproject.toml  requirements.txt
data/: basic_test_resume.docx  html_resume.html  test_plain_resume.docx
docs/: AI_Resume_Parsing.md  format_details.md  simple_resume.docx
resume_writer/: __init__.py  debug_settings.toml  generate_examples.sh  main.py  resume_markdown.py  resume_model.py  resume_settings.toml  settings_debug.toml  settings_nosummary_resume.toml  settings_skills_matrix.toml  settings_summary_resume.toml
resume_writer/data/: ats_resume.docx  basic_test_skils_matrix.docx  html_resume.html  markdown_resume.md  plain_full_resume.docx  plain_no_summary_resume.docx  plain_summary_resume.docx  plain_test_resume.docx  test_ats_resume.docx  test_basic_resume.docx  test_plain_resume.docx
resume_writer/docx_render/: ats_certifications_section.py  ats_education_section.py  ats_experience_section.py  ats_personal_section.py  ats_resume.py  ats_roles_section.py  docx_render_base.py  resume_settings.py
resume_writer/models/: __init__.py  certifications.py  education.py  experience.py  parsers.py  personal.py  resume.py  roles.py
resume_writer/renderers/: __init__.py  html_renderer.py  markdown_renderer.py
resume_writer/resume_render/: docx_hyperlink.py  docx_render_base.py  render_settings.py  resume_render_base.py  resume_render_html_base.py  resume_render_text_base.py  skills_matrix.py
resume_writer/resume_render/ats/: __init__.py  ats_certifications_section.py  ats_education_section.py  ats_experience_section.py  ats_personal_section.py  ats_resume.py  certifications_section.py  education_section.py  executive_summary_section.py  experience_section.py  personal_section.py  resume_main.py  skills_matrix_section.py
resume_writer/resume_render/basic/: __init__.py  basic_certifications_section.py  basic_education_section.py  basic_experience_section.py  basic_resume.py  certifications_section.py  education_section.py  executive_summary_section.py  experience_section.py  personal_section.py  resume_main.py  skills_matrix_section.py
resume_writer/resume_render/functional/: certifications_section.py  experience_section.py  personal_section.py  resume_main.py
resume_writer/resume_render/html/: __init__.py  certifications_section.py  education_section.py  executive_summary_section.py  experience_section.py  personal_section.py  resume_main.py  skills_matrix_section.py
resume_writer/resume_render/html/templates/: certifications.j2  education.j2  personal.j2  projects.j2  roles.j2
resume_writer/resume_render/markdown/: __init__.py  certifications_section.py  education_section.py  experience_section.py  personal_section.py  resume_main.py  skills_matrix_section.py
resume_writer/resume_render/markdown/templates/: certifications.j2  education.j2  personal.j2  projects.j2  roles.j2
resume_writer/resume_render/plain/: __init__.py  certifications_section.py  education_section.py  executive_summary_section.py  experience_section.py  personal_section.py  resume_main.py  skills_matrix_section.py
resume_writer/resume_render/simple/: simple_certifications_section.py  simple_education_section.py  simple_experience_section.py  simple_personal_section.py  simple_resume.py
resume_writer/utils/: __init__.py  date_format.py  executive_summary.py  html_doc.py  markdown_doc.py  markdown_parser.py  resume_stats.py  skills_matrix.py  skills_splitter.py  skills_splitter_revamped.py  text_doc.py
setting_files/: settings_ats_resume.toml  settings_debug.toml  settings_full_resume.toml  settings_summary_resume.toml  settings_website.toml
tests/: common.py  test_executive_summary.py  test_experience_totals.py  test_parse_certification_block.py  test_parse_certifications_block.py  test_parse_education_block.py  test_parse_job_basics.py  test_parse_personal_block.py  test_parse_personal_info_block.py  test_parse_resume.py  test_parse_role_blocks.py  test_parse_top_level_block.py  test_parse_top_level_label_block.py  test_parse_top_level_multi_block.py  test_parse_work_history_blocks.py  test_resume.md  test_resume_stats.py  test_stats.py
tests/ATSResume/: test_base_render.py
tests/parser/: test_experience_totals.py  test_parse_certifications_block.py  test_parse_education_block.py  test_parse_experience_block.py  test_parse_personal_block.py  test_parse_projects_block.py  test_parse_resume.py  test_parse_role_blocks.py  test_parse_top_level_block.py  test_skills_splitter.py
tests/render/ATSResume/: test_base_render.py
tests/render/basic/: test_certifications_render.py  test_education_render.py  test_executive_summary_renderer.py  test_experience_render.py  test_personal_render.py  test_projects_render.py  test_resume_render.py  test_roles_render.py  test_skills_matrix_render.py
tests/render/plain/: test_resume_render.py
tests/render_settings/: test_basic_update.py  test_certification_update.py  test_education_update.py  test_general_resume_update.py  test_personal_update.py  test_projects_update.py  test_render_settings.py  test_roles_update.py
