[project]
name = "resume_writer"
version = "0.1.0"
license = { file = "LICENSE" }


[tool.poetry]
name = "resume-writer"
version = "0.1.0"
description = ""
authors = ["Michael Aguilar <bitflip@slowlink.net>"]
readme = "README.md"
packages = [{include = "resume_writer"}]

[tool.poetry.dependencies]
python = "^3.10"
mistune = "^3.0.2"
rich = "^13.7.1"
python-docx = "^1.1.2"
click = "^8.1.7"
tomli = "^2.0.1"
dateparser = "^1.2.0"
jinja2 = "^3.1.4"
pytz = "^2024.2"
nltk = "^3.9.1"
mosestokenizer = "^1.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.1"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["temporal-samples-python"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "D201", "D202",
    "RET504", # ignore assignment right before return
    "PGH003", # ignore general mypy type: ignore
    "PTH123", # ignore Path.open
    "FA102", # ignore annotation warning, we require v3.10
    "ANN102", # ignore `cls` annotations
    "TD002", "TD003", "FIX002", # ignore TODO details
    "S101", # ignore asserts
    "ANN204", # ignore __init__ return type
    "UP032", "G001", # I like str.format
    "TRY003", # Ignore long exception messages
    "D104", "D100", # Ignore docstring for __init__.py, __main__.py
    "EM101", "EM102", "G004", # Ignore strings in exception and logs, I'm feeling lazy
    "FBT001", # ignore boolean parameters
    "FBT002", # ignore boolean init
    ]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ANN", # ignore annotations in tests
                    "D", # ignore docstrings in tests
                    "I", # ignore import order in tests
                    "PLR2004", # ignore magic values in tests
                    "DTZ005", # ignore datetime.now() in tests,
                    "DTZ001", # ignore datetime.utcnow() in tests
                    "B010" # ignore setattr in tests
]

[tool.pytest.ini_options]
pythonpath = [".", "./resume_writer", "./tests"]
addopts = "-rx"
