[project]
name = "resume-writer"
version = "0.2.1"
license = { file = "LICENSE" }
authors = [
    {name = "Michael Aguilar", email = "bitflip@slowlink.net"},
]
requires-python = ">=3.10"
dependencies = [
    "mistune<4.0.0,>=3.0.2",
    "python-docx>=1.2.0,<2.0.0",
    "click<9.0.0,>=8.1.7",
    "tomli<3.0.0,>=2.0.1",
    "dateparser<2.0.0,>=1.2.0",
    "jinja2<4.0.0,>=3.1.4",
    "pytz<2025.0,>=2024.2",
    "nltk<4.0.0,>=3.9.1",
    "mosestokenizer<2.0.0,>=1.2.1",
    "dotenv>=0.9.9",
    "rich>=14.1.0",
]
description = ""
readme = "README.md"

[tool.setuptools.packages.find]     
include = ["resume_writer*"]

[tool.ruff]
exclude = ["temporal-samples-python"]

[tool.ruff.lint]
select = [
    "A002",   # Argument shadows python built-in
    "ANN001", # Missing type annotation for argument
    "ANN201", # Missing return type annotation
    "ANN401", # Disallow use of typing.Any
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "F841",   # Unused local variable
    "RUF006", # Store reference to asyncio.create_task return
    "TC002",  # Move third-party import into type-checking block
    "FAST",   # FastAPI-specific errors
    "D417",   # Missing argument description in docstring
    "C",      # McCabe complexity check
    "PLR0913",# Too many arguments
    "I001",   # Import sorting (isort)
    "COM812", # Missing trailing comma
    "UP035",  # Deprecated typing imports
    "PIE790", # Unnecessary placeholder (pass)
    "RET505", # Superfluous else/return
    "ANN003", # Missing **kwargs type annotation
    "B904",   # Raise without from clause
    "FBT001", # Boolean positional arg in function def
    "FBT003", # Boolean positional value in call
    "UP007",  # Use X | Y for Union
    "UP045",  # Use X | None for Optional
    "F401",   # Unused imports
    "SIM110", # Use any/all instead of loop
    "TC006",  # Unquoted type expression in cast()
    "BLE001", # Blind except: except Exception
    "F541",   # F-string without placeholders
    "DTZ007", # Naive datetime from strptime
    "PLR2004",# Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ANN", "D", "I", "DTZ", "COM812", "PERF401", "PLC0415", "ARG001", "PLR0913", "INP001", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
pythonpath = [".", "./resume_writer", "./tests"]
addopts = "-rx"
log_cli_level = "DEBUG"

[dependency-groups]
dev = [
    "aider-chat>=0.85.5",
    "mypy<2.0.0,>=1.11.0",
    "pytest<9.0.0,>=8.3.1",
    "coverage<8.0.0,>=7.6.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "types-pytz>=2026.1.1.20260304",
    "types-dateparser>=1.3.0.20260211",
]
